<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">Pushy</string>
  <string name="title_activity_main">&clips;</string>
  <string name="title_activity_main_local_fmt">%s: Local clip</string>
  <string name="title_activity_main_remote_fmt" formatted="false">%s: Remote clip - %s</string>
  <string name="title_activity_clip_viewer">Local clip</string>
  <string name="title_activity_clip_viewer_remote">Remote clip</string>
  <string name="title_activity_settings">Settings</string>
  <string name="title_activity_error_viewer">Last error</string>
  <string name="title_activity_help">Help &amp; feedback</string>
  <string name="title_activity_sign_in">Manage account</string>
  <string name="title_activity_devices">Remote devices</string>
  <string name="title_activity_labels_edit">Edit labels</string>
  <string name="title_activity_labels_select">Select labels</string>
  <string name="title_activity_clip_editor">Edit clip text</string>
  <string name="title_activity_clip_editor_add_mode">Create new clip</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_favorite">Toggle favorite</string>
  <string name="action_labels_select">Select labels</string>
  <string name="action_pin">Pin favorites to top</string>
  <string name="action_no_pin">Unpin favorites</string>
  <string name="action_show_favs">Show favorites</string>
  <string name="action_show_all">Show all</string>
  <string name="action_send">Send clipboard contents</string>
  <string name="action_search">Search</string>
  <string name="action_email">Email support</string>
  <string name="action_backup">Backup data to Google Drive</string>
  <string name="action_search_web">Search Web</string>
  <string name="action_copy">Copy</string>
  <string name="action_add_clip">Create new</string>
  <string name="action_edit_text">Edit clip text</string>
  <string name="action_save_changes">Save changes</string>
  <string name="action_discard_changes">Discard changes</string>
  <string name="action_share">Share</string>
  <string name="action_sort">Sort by</string>
  <string name="action_delete">Delete</string>
  <string name="action_delete_all">Delete all</string>
  <string name="action_settings">Settings</string>
  <string name="action_help_feedback">Help &amp; feedback</string>
  <string name="action_help">Help</string>
  <string name="action_help_view_store">View in Google Play Store</string>
  <string name="action_help_version">Version info</string>
  <string name="action_help_licenses">Open source licenses</string>
  <string name="action_help_privacy">Privacy</string>
  <string name="nav_account">Manage account</string>
  <string name="nav_backup">Manage backups</string>
  <string name="nav_devices">Query remote devices</string>
  <string name="nav_labels_manage">Manage labels</string>
  <string name="nav_labels">Labels</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_error">View last error</string>
  <string name="nav_help">Help &amp; feedback</string>
  <string name="nav_extension">Get Chrome extension</string>
  <string name="chrome_extension_url" translatable="false">https://chrome.google.com/webstore/detail/pushy-clipboard/jemdfhaheennfkehopbpkephjlednffd</string>
  <string name="rate_app">Rate app</string>
  <string name="pref_cat_title_clipboard">Clipboard</string>
  <string name="key_pref_cat_clipboard">cat_clipboard</string>
  <string name="pref_title_monitor_clipboard">Monitor clipboard</string>
  <string name="pref_desc_monitor_clipboard">Run service to monitor clipboard changes</string>
  <string name="key_pref_monitor_clipboard">monitor_clipboard</string>
  <string name="pref_title_monitor_startup">Monitor clipboard on boot</string>
  <string name="pref_desc_monitor_startup">Start service when device is turned on</string>
  <string name="key_pref_monitor_startup">monitor_startup</string>
  <string name="pref_cat_title_msg">Messaging</string>
  <string name="key_pref_cat_msg">cat_msg</string>
  <string name="pref_title_push_msg">Push to devices</string>
  <string name="pref_desc_push_msg">Send messages to your registered devices</string>
  <string name="key_pref_push_msg">push_clipboard</string>
  <string name="pref_title_auto_msg">Auto send</string>
  <string name="pref_desc_auto_msg">Automatically send messages to your registered devices</string>
  <string name="key_pref_auto_msg">auto_clipboard</string>
  <string name="pref_title_receive_msg">Receive from devices</string>
  <string name="pref_desc_receive_msg">Receive messages from your registered devices</string>
  <string name="key_pref_receive_msg">receive_clipboard</string>
  <string name="pref_title_heartbeat">Heartbeat interval</string>
  <string name="key_pref_heartbeat">heartbeat</string>
  <string name="ar_heartbeat_one">1 minute (max. battery usage)</string>
  <string name="ar_heartbeat_two">2 minutes</string>
  <string name="ar_heartbeat_three">3 minutes</string>
  <string name="ar_heartbeat_four">4 minutes</string>
  <string name="ar_heartbeat_five">5 minutes (recommended)</string>
  <string name="ar_heartbeat_ten">10 minutes</string>
  <string name="ar_heartbeat_fifteen">15 minutes</string>
  <string name="ar_heartbeat_one_value" translatable="false">1</string>
  <string name="ar_heartbeat_two_value" translatable="false">2</string>
  <string name="ar_heartbeat_three_value" translatable="false">3</string>
  <string name="ar_heartbeat_four_value" translatable="false">4</string>
  <string name="ar_heartbeat_five_value" translatable="false">5</string>
  <string name="ar_heartbeat_ten_value" translatable="false">10</string>
  <string name="ar_heartbeat_fifteen_value" translatable="false">15</string>
  <string name="pref_title_priority_msg">High priority message</string>
  <string name="pref_desc_priority_msg">Wakes android devices for immediate delivery.</string>
  <string name="key_pref_priority_msg">priority_clipboard</string>
  <string name="pref_cat_title_general">Device</string>
  <string name="key_pref_cat_general">cat_general</string>
  <string name="pref_title_nickname">Nickname</string>
  <string name="pref_desc_nickname_fmt">%s</string>
  <string name="key_pref_nickname">nickname</string>
  <string name="pref_nickname_hint">e.g. Work Phone</string>
  <string name="pref_title_duration">Storage duration</string>
  <string name="key_pref_duration">storage_duration</string>
  <string name="ar_duration_day">One day</string>
  <string name="ar_duration_week">One week</string>
  <string name="ar_duration_month">One month</string>
  <string name="ar_duration_year">One year</string>
  <string name="ar_duration_forever">Forever</string>
  <string name="ar_duration_day_value" translatable="false">day</string>
  <string name="ar_duration_week_value" translatable="false">week</string>
  <string name="ar_duration_month_value" translatable="false">month</string>
  <string name="ar_duration_year_value" translatable="false">year</string>
  <string name="ar_duration_forever_value" translatable="false">forever</string>
  <string name="pref_title_auto_backup">Auto data backup</string>
  <string name="pref_desc_auto_backup">Perform a daily backup of all your data to Google Drive.</string>
  <string name="key_pref_auto_backup">auto_backup</string>
  <string name="pref_title_theme">Theme</string>
  <string name="key_pref_theme">theme</string>
  <string name="ar_theme_light">light</string>
  <string name="ar_theme_dark">dark</string>
  <string name="ar_theme_light_value" translatable="false">light</string>
  <string name="ar_theme_dark_value" translatable="false">dark</string>
  <string name="pref_cat_title_notifications">Notifications</string>
  <string name="key_pref_cat_notifications">cat_notifications</string>
  <string name="pref_title_notifications">Show notifications</string>
  <string name="key_pref_notifications">notifications</string>
  <string name="pref_title_manage_not">Manage notifications</string>
  <string name="key_pref_manage_not">manage_notifications</string>
  <string name="pref_title_not_types">Notification types</string>
  <string name="key_pref_not_types">notificationTypes</string>
  <string name="ar_not_remote">On remote copy received</string>
  <string name="ar_not_local">On local copy</string>
  <string name="ar_not_dev_added">On device added</string>
  <string name="ar_not_dev_removed">On device removed</string>
  <string name="ar_not_error">On error</string>
  <string name="ar_not_remote_value" translatable="false">remoteCopy</string>
  <string name="ar_not_local_value" translatable="false">localCopy</string>
  <string name="ar_not_dev_added_value" translatable="false">deviceAdded</string>
  <string name="ar_not_dev_removed_value" translatable="false">deviceRemoved</string>
  <string name="ar_not_error_value" translatable="false">notifyError</string>
  <string name="pref_title_not_audible_once">Audible only once</string>
  <string name="key_pref_not_audible_once">audible_once</string>
  <string name="pref_desc_not_audible_once">New notifications are silent if already visible</string>
  <string name="pref_title_ringtone">Tone</string>
  <string name="key_pref_ringtone">ringtone</string>
  <string name="key_pref_ringtone_silent">None</string>
  <string name="ar_sort_type_date">date</string>
  <string name="ar_sort_type_text">text</string>
  <string name="ar_delete_favs">Include favorites</string>
  <string name="default_clip_1"><![CDATA[Welcome to Pushy Clipboard. Tap to view all.
    \n\nIf you want to share with your other devices, you need to install the app or Chrome extension
     on each device and sign in under the same Google account.
    \n\nIt is a good idea to go to the "Settings" and enter a nickname for this device.
    \n\nContact me for support or to provide feedback pushyclipboard@gmail.com
    \n\nI write free and advertising free open source software for fun and hope it benefits others.
     If you find the app of value, please rate it. Thank you.]]></string>
  <string name="help_title_feedback">Feedback (English only, please)</string>
  <string name="help_email_question">Question</string>
  <string name="help_email_question_tag" translatable="false">Question</string>
  <string name="help_email_bug">Bug report</string>
  <string name="help_email_bug_tag" translatable="false">Bug report</string>
  <string name="help_email_feature">Feature request</string>
  <string name="help_email_feature_tag" translatable="false">Feature request</string>
  <string name="help_email_trans">Volunteer help with translations</string>
  <string name="help_email_trans_tag" translatable="false">Volunteer help with translations</string>
  <string name="help_email_general">General feedback</string>
  <string name="help_email_general_tag" translatable="false">General feedback</string>
  <string name="help_github_issue">Submit issue to GitHub</string>
  <string name="help_github_issue_tag" translatable="false">https://github.com/Pushy-Clipboard/pushy-android/issues/new</string>
  <string name="help_title_documentation">Help</string>
  <string name="help_doc_usage">User documentation</string>
  <string name="help_doc_usage_tag" translatable="false">https://pushy-clipboard.github.io/documentation.html</string>
  <string name="help_doc_release">Release notes</string>
  <string name="help_doc_releas_tag_fmt" translatable="false">https://github.com/Pushy-Clipboard/pushy-android/releases/tag/v%s</string>
  <string name="help_doc_source">Source code</string>
  <string name="help_doc_source_tag" translatable="false">https://github.com/Pushy-Clipboard/pushy-android/</string>
  <string name="license" translatable="false"><a href="https://github.com/Pushy-Clipboard/pushy-android/blob/master/LICENSE.md">Apache 2.0</a></string>
  <string name="copyright" translatable="false">&#169;2017 Michael A Updike</string>
  <string name="version_fmt">Version %s</string>
</resources>