<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017, Michael A. Updike All rights reserved.
  ~ Licensed under Apache 2.0
  ~ https://opensource.org/licenses/Apache-2.0
  ~ https://github.com/Pushy-Clipboard/pushy-android/blob/master/LICENSE.md
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:title="@string/pref_cat_title_clipboard"
    android:key="@string/key_pref_cat_clipboard">

    <SwitchPreferenceCompat
      android:defaultValue="true"
      android:key="@string/key_pref_monitor_clipboard"
      android:title="@string/pref_title_monitor_clipboard"
      android:summary="@string/pref_desc_monitor_clipboard" />

    <SwitchPreferenceCompat
      android:dependency="@string/key_pref_monitor_clipboard"
      android:defaultValue="true"
      android:key="@string/key_pref_monitor_startup"
      android:title="@string/pref_title_monitor_startup"
      android:summary="@string/pref_desc_monitor_startup" />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/pref_cat_title_msg"
    android:key="@string/key_pref_cat_msg">

    <SwitchPreferenceCompat
      android:defaultValue="true"
      android:key="@string/key_pref_push_msg"
      android:title="@string/pref_title_push_msg"
      android:summary="@string/pref_desc_push_msg" />

    <SwitchPreferenceCompat
      android:dependency="@string/key_pref_push_msg"
      android:defaultValue="true"
      android:key="@string/key_pref_auto_msg"
      android:title="@string/pref_title_auto_msg"
      android:summary="@string/pref_desc_auto_msg" />

    <SwitchPreferenceCompat
      android:defaultValue="true"
      android:key="@string/key_pref_receive_msg"
      android:title="@string/pref_title_receive_msg"
      android:summary="@string/pref_desc_receive_msg" />

    <SwitchPreferenceCompat
      android:defaultValue="true"
      android:key="@string/key_pref_priority_msg"
      android:title="@string/pref_title_priority_msg"
      android:summary="@string/pref_desc_priority_msg" />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/pref_cat_title_general"
    android:key="@string/key_pref_cat_general">

    <EditTextPreference
      android:defaultValue=""
      android:key="@string/key_pref_nickname"
      android:title="@string/pref_title_nickname"
      android:summary="@string/pref_desc_nickname_fmt"
      android:dialogTitle="@string/pref_title_nickname"
      android:hint="@string/pref_nickname_hint"
      android:inputType="textCapWords"
      android:maxLength="32"
      android:maxLines="1" />

    <ListPreference
      android:defaultValue="forever"
      android:key="@string/key_pref_duration"
      android:title="@string/pref_title_duration"
      android:summary="%s"
      android:entries="@array/pref_duration_entries"
      android:entryValues="@array/pref_duration_values" />

    <ListPreference
      android:defaultValue="light"
      android:key="@string/key_pref_theme"
      android:title="@string/pref_title_theme"
      android:summary="%s"
      android:entries="@array/pref_theme_entries"
      android:entryValues="@array/pref_theme_values" />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/pref_cat_title_notifications"
    android:key="@string/key_pref_cat_notifications">

    <SwitchPreferenceCompat
      android:defaultValue="true"
      android:key="@string/key_pref_notifications"
      android:title="@string/pref_title_notifications" />

    <MultiSelectListPreference
      android:dependency="@string/key_pref_notifications"
      android:defaultValue="@array/pref_not_types_default_values"
      android:key="@string/key_pref_not_types"
      android:title="@string/pref_title_not_types"
      android:entries="@array/pref_not_types_entries"
      android:entryValues="@array/pref_not_types_values" />

    <SwitchPreferenceCompat
      android:dependency="@string/key_pref_notifications"
      android:defaultValue="true"
      android:key="@string/key_pref_not_audible_once"
      android:title="@string/pref_title_not_audible_once"
      android:summary="@string/pref_desc_not_audible_once" />

    <Preference
      android:dependency="@string/key_pref_notifications"
      android:defaultValue=""
      android:key="@string/key_pref_ringtone"
      android:title="@string/pref_title_ringtone" />

  </PreferenceCategory>

</PreferenceScreen>
