<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~ Copyright 2016 Michael A Updike
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/nav_clips"
    android:enabled="true"
    android:icon="@drawable/ic_notification"
    android:title="@string/title_activity_main" />
  <item
    android:id="@+id/nav_account"
    android:enabled="true"
    android:icon="@drawable/ic_account_circle_black_24dp"
    android:title="@string/nav_account" />
  <item
    android:id="@+id/nav_backup"
    android:enabled="true"
    android:icon="@drawable/ic_cloud"
    android:title="@string/nav_backup" />
  <item
    android:id="@+id/nav_devices"
    android:enabled="true"
    android:icon="@drawable/ic_devices_black_24dp"
    android:title="@string/nav_devices" />
  <item
    android:id="@+id/nav_labels_edit"
    android:enabled="true"
    android:icon="@drawable/ic_label"
    android:title="@string/nav_labels_manage" />

  <group android:id="@+id/nav_group_labels">
    <item
      android:id="@+id/nav_labels_sub_menu"
      android:enabled="true"
      android:title="@string/nav_labels"
      android:visible="true">
      <menu>

      </menu>
    </item>
  </group>

  <group android:id="@+id/nav_group_settings_help">
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_settings_black_24dp"
      android:title="@string/nav_settings" />
    <item
      android:id="@+id/nav_error"
      android:icon="@drawable/ic_error"
      android:title="@string/nav_error" />
    <item
      android:id="@+id/nav_help"
      android:icon="@drawable/ic_help_black_24dp"
      android:title="@string/nav_help" />
  </group>

  <group android:id="@+id/nav_group_one_off">
    <item
      android:id="@+id/nav_chrome_extension"
      android:icon="@drawable/ic_extension_black_24dp"
      android:title="@string/nav_extension" />
    <item
      android:id="@+id/rate_app"
      android:icon="@drawable/ic_star"
      android:title="@string/rate_app" />
  </group>

</menu>
