<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017, Michael A. Updike All rights reserved.
  ~ Licensed under Apache 2.0
  ~ https://opensource.org/licenses/Apache-2.0
  ~ https://github.com/Pushy-Clipboard/pushy-android/blob/master/LICENSE.md
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn=".ui.clipviewer.ClipViewerActivity"
    tools:context=".ui.clipviewer.ClipViewerActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search_web"
        android:icon="@drawable/search_web"
        android:title="@string/action_search_web"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

</menu>
