<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017, Michael A. Updike All rights reserved.
  ~ Licensed under Apache 2.0
  ~ https://opensource.org/licenses/Apache-2.0
  ~ https://github.com/Pushy-Clipboard/pushy-android/blob/master/LICENSE.md
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.help.HelpActivity"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:id="@+id/appName" />

    <TextView
        android:text="@string/version_fmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignLeft="@+id/appName"
        android:layout_alignStart="@+id/appName"
        android:maxLines="1"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:id="@+id/version" />

    <TextView
        android:text="@string/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:id="@+id/copyright" />

    <com.weebly.opus1269.clipman.ui.views.ClickableLinksTextView
        android:text="@string/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/copyright"
        android:layout_alignLeft="@+id/version"
        android:layout_alignStart="@+id/version"
        android:maxLines="1"
        android:clickable="true"
        android:onClick="onItemClicked"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:id="@+id/license" />


</RelativeLayout>
